Optimised mobile performance

--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+png" href="/sb-circle-logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sebastian Bury | Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+png" href="/sb-circle-logo.png" />
+  <title>Sebastian Bury</title>
+
+  <meta name="description"
+    content="Sebastian Bury - 3rd Year Computer Science Student specializing in Full Stack Development, and innovative tech solutions. Explore my projects and portfolio." />
+  <meta name="keywords"
+    content="Sebastian Bury, Software Engineer, AI, Web Development, Portfolio, Projects, React, Vite" />
+  <meta name="author" content="Sebastian Bury" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Sebastian Bury Portfolio" />
+  <meta property="og:description"
+    content="3rd Year Computer Science Student specializing in Full Stack Development, and innovative tech solutions. Explore my projects and portfolio." />
+  <meta property="og:image" content="https://sebastianbury.com/sb-circle-logo.png" />
+  <meta property="og:url" content="https://sebastianbury.com" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Sebastian Bury Portfolio" />
+  <meta name="twitter:description"
+    content="3rd Year Computer Science Student specializing in Full Stack Development, and innovative tech solutions. Explore my projects and portfolio." />
+  <meta name="twitter:image" content="https://sebastianbury.com/sb-circle-logo.png" />
+
+  <link rel="icon" href="/sb-circle-logo.png" />
+  <link rel="manifest" href="/manifest.json" />
+
+  <link rel="canonical" href="https://sebastianbury.com" />
+
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Sebastian Bury",
+        "jobTitle": "Software Engineer",
+        "url": "https://sebastianbury.com",
+        "sameAs": [
+          "https://www.linkedin.com/in/sebastianbury",
+          "https://github.com/sebastianburyy"
+        ]
+      }
+      </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
